browse/static/css/latexml_styles.css
/* ... */
header .html-header-nav a span:hover {
  text-shadow: 0 0 0 #000000;
  color: transparent;
}
header .html-header-nav svg {
  fill: white;
  background: transparent;
}
header .html-header-nav svg:hover {
  fill: black;
  text-decoration: none;
}
header.mob_header .html-header-nav {
  gap: 15%;
}



.logo {
  background-color: transparent !important;
  max-height: 2em;
}

#back-arrow {
  background-color: transparent !important;
}

/* .header-message {
  border: 10px solid #fb595a;
  background: #fb595a;
  border-radius: 6px;
  max-width: 50%;
  font-family: sans-serif;
  font-size: smaller;
  color: black;
} */

.body-message {
  display: block;
  max-width: 40em;
  margin: 3em auto;
  border: 2px solid #a5d6fe;
  font-family: "Noto Serif", serif;
  border-radius: 5px;
  padding: 1em;
  box-shadow: 1px 3px 8px 0.1px grey;
}

.body-message p,
.body-message-mobile p {
  margin: 0;
  margin-top: -15px;
}

.body-message-mobile {
  display: none;
}

a.skip {
  position: absolute;
  left: -10000px;
  top: auto;
  width: 1px;
  height: 1px;
  overflow: hidden;
}

a.skip:focus {
  position: static;
  width: auto;
  height: auto;
}

button.feedback-button {
  position: fixed;
  bottom: 1em;
  right: 1em;
  background-color: #a5d6fe;
  color: black;
  padding: .5em 1em;
  border-radius: .5em;
  font-size: 1.1em;
  font-weight: bold;
}

.close-icon {
  position: relative;
  top: -10px;
  right: -99%;
}


/*BETA corner banner*/
body:after {
  content: "beta";
  position: fixed;
  z-index: 1070;
  width: 80px;
  height: 25px;
  background: #fb595a;
  top: 7px;
  left: -20px;
  text-align: center;
  font-size: 12px;
  letter-spacing: 1px;
  font-family: sans-serif;
  text-transform: uppercase;
  font-weight: bold;
  color: black;
  line-height: 27px;
  -ms-transform: rotate(-45deg);
  -webkit-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

/*will display to screen readers, but not be visible to sighted users*/
.sr-only {
  position: absolute;
  left: -10000px;
  top: auto;
  width: 1px;
  height: 1px;
  overflow: hidden;
}

/* For warning label. */
[data-theme=light] #warningLabel {
  color: #b31313;
  background-color: rgb(250, 241, 230);
  font-size: 12px;
  letter-spacing: 1px;
  padding: 1em;
  border-radius: .5em;
  margin: 1em auto;
}

[data-theme=dark] #warningLabel {
  color: rgb(209, 190, 137);
  background-color: rgb(65, 57, 33);
  font-size: 12px;
  letter-spacing: 1px;
  padding: 1em;
  border-radius: .5em;
  margin: 1em auto;
}

.toggle-icon {
  color: currentColor;
  cursor: pointer;
}

.toggle-icon>svg {
  fill: currentcolor;
  display: block;
  height: 1.2rem;
  width: 1.2rem;
}

.color-scheme-icon::before {
  content: "🌙";
}
[data-theme="dark"] .color-scheme-icon::before {
  content: "☀️";
}
.ar5iv-toggle-color-scheme {
  text-decoration: none;
  display: block;
  float: left;
  padding: 0.5rem;
  margin-top: 0.1rem;
  color: transparent;
  text-shadow: 0 0 0 var(--header-text-color);
}

.ar5iv-footer-button {
  color: var(--link-text-color);
  font-family: var(--other-font-family);
  padding: 0.5rem;
  display: inline-block;
  text-decoration: none;
  margin-right: 1rem;
}

/* Update: For toc */
/* careful, we need a specific selector, because
   the innermost .ltx_text spans have a defined font-family. */
nav.ltx_TOC .ltx_text {
  font-family: var(--toc-font-family);
}
nav.ltx_TOC {
  position: sticky;
  top:0;
  height: 100vh;
  margin: 0;
  padding-top: 8.5vh;
  overflow-y: auto;
  user-select: none;
  color: var(--text-color);
}
nav.ltx_TOC.active {
  min-width: 18em;
  max-width:20%;
  background-image: var(--TOC-gradient);
}
nav.ltx_TOC:not(.active) {
  margin-right: -40px;
}
.ltx_page_main ol.ltx_toclist {
  padding: 0 2em;
}
#toc_header{
  display: none;
}

.ltx_page_main {
  display: flex;
}

.ltx_page_main > .ltx_page_content {
  width: 100%;
  margin: 5.5em 1em 3.5em 1em;
  flex-grow: 0;  /* This allows the content to grow and consume remaining space */
  flex-shrink: 1;
  overflow-x: auto;
  overflow-y: clip;
}

[data-theme=dark] .ltx_TOC {
  background-color: var(--background-color);
  color: #c9d1d9;
}

.ltx_TOC>.ltx_toclist>.ltx_tocentry {
  margin-bottom: 0.3em;
  margin-left: 1.5rem;
}

.ltx_tocentry.ltx_tocentry_appendix {
  margin-bottom: 0.3rem;
  margin-left: 1.5rem;
}
/*appendix nav styles*/
.ltx_TOC>.ltx_toclist>.ltx_tocentry.ltx_tocentry_appendix>a.ltx_ref {
  font-weight: 500;
}
.ltx_TOC>.ltx_toclist>.ltx_tocentry.ltx_tocentry_appendix>a.ltx_ref .ltx_tag_ref {
  font-weight: 700;
}

.ltx_toclist.ltx_toclist_section{
  display: none !important;
}

/*optimize for toc displaying*/
li.ltx_tocentry.ltx_tocentry_subsection {
  display: none;
}

li.ltx_tocentry.ltx_tocentry_appendix {
  display: none;
}


/* TOC styles */
.ltx_ref:hover{
  /* background-color: var(--note-highlight-color); */
  /* Add underline */
  text-decoration: underline;
  /* Chaneg text color */
  color: var(--toc-text-highlight-color);
}

.ltx_p>.ltx_ref:hover,
.ltx_cite>.ltx_ref:hover{
  color: var(--inpage-text-highlight-color);
}

#listIcon {
  width: 20px;
  height: 20px;
  margin-left: 1.4rem;
  margin-top: 10px;
  margin-bottom: 1rem;
  /* align-items: center; */
  z-index: 100;
  /* display: none; */
}

#arrowIcon {
  width: 20px;
  height: 20px;
  margin-left: 1.4rem;
  margin-top: 10px;
  margin-bottom: 1rem;
  /* align-items: center; */
  /* display: block; */
}

#listIcon svg, #arrowIcon svg {
  background-color: transparent;
  fill:var(--text-color) !important;
}
#listIcon svg:hover, #arrowIcon svg:hover {
  fill:var(--link-text-color) !important;
}

#toc_header {
  font-size: 1.5rem;
  margin-bottom: 1.3rem;
  font-family: var(--text-font-family);
  font-weight: 1000;
}

.ltx_toclist a.active {
  font-weight: bold; /* You can apply any styling you want to indicate the active link */
  background-color: var(--note-highlight-color);
}

/* Build for header */
.hover-effect:hover{
  text-decoration: underline;
  color: var(--note-highlight-color);
}
/* ... */

